# speech_to_ae_subtitle

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml
.devcontainer/: devcontainer.json
src/: .env.dev  Makefile  ae_script.py  ae_script_converter.py  config.py  convert.py  converter.py  pyproject.toml  test.json  uploader.py
src/lambda_transcribe_function/: lambda_function.py
