[tool.poetry]
name = "speech_to_ae_subtitle"
version = "0.1.0"
description = "Convert speech to AE subtitle"

license = "MIT"

authors = ["Kiyoto Yamaura <kiyodori@yahoo.co.jp>"]

[tool.poetry.dependencies]
python = "^3.9"
fire = "^0.4.0"
awscli = "^1.20.37"
boto3 = "^1.18.37"
python-dotenv = "^0.19.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = "^21.8b0"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 119
